template/static/styles/site.spacelab.css
/* ... */
#toc .toc-active {
  background-color: #6c737e;
  color: #fff;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
}
#toc .toc-active a,
#toc .toc-active a:hover,
#toc .toc-active a:active,
#toc .toc-active a:visited {
  background-color: #6c737e;
  color: #fff;
}
#toc .toc-h1 {
  margin-left: 2px;
  margin-right: 2px;
}
#toc .toc-h2 {
  margin-left: 7px;
  margin-right: 7px;
}
#toc .toc-h3 {
  margin-left: 14px;
  margin-right: 7px;
}
#toc .toc-h4 {
  margin-left: 21px;
  margin-right: 7px;
}

#fixedMenu {
  position: fixed;
  top: 62px;
  left: 0;
  max-height: 82%;
  overflow: auto;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
  border: 1px #eeeeee solid;
  padding: 5px;
  max-width: 240px;
}
#fixedMenu .toc-active {
  background-color: #6c737e;
  color: #fff;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
}
#fixedMenu .toc-active a,
#fixedMenu .toc-active a:hover,
#fixedMenu .toc-active a:active,
#fixedMenu .toc-active a:visited {
  background-color: #6c737e;
  color: #fff;
}
#fixedMenu .toc-h1 {
  margin-left: 2px;
  margin-right: 2px;
}
#fixedMenu .toc-h2 {
  margin-left: 7px;
  margin-right: 7px;
}
#fixedMenu .toc-h3 {
  margin-left: 14px;
  margin-right: 7px;
}
#fixedMenu .toc-h4 {
  margin-left: 21px;
  margin-right: 7px;
}

.copyright {
  font-size: 90%;
  text-align: center;
  color: #446e9b;
  width: 100%;
  display: block;
}
.jsdoc-message {
  font-size: 90%;
  text-align: center;
  color: #446e9b;
  width: 100%;
  display: block;
}
.page-title {
  font-size: 220%;
  color: #446e9b;
  font-weight: 700;
  padding-top: 10px;
  padding-bottom: 7px;
  display: block;
}
footer {
  border-top: 1px solid transparent;
  padding-top: 15px;
}
code {
  background-color: none;
  border: none;
  color: orange;
}
.buffered-name {
  padding-top: 62px;
  margin-top: -62px;
}
.member-collapsed {
  background-color: #446e9b;
  color: #dddddd;
}
.member-open {
  background-color: inherit;
  color: inherit;
}
.member {
  -webkit-transition: background-color 0.5s linear;
  -o-transition: background-color 0.5s linear;
  transition: background-color 0.5s linear;
  -webkit-transition: color 0.5s linear;
  -o-transition: color 0.5s linear;
  transition: color 0.5s linear;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
  padding: 3px;
  margin-top: 5px;
  margin-bottom: 5px;
}
.member-name {
  padding-top: 100px !important;
  margin-top: -100px !important;
}
.sunlight-highlighted {
  margin: 0;
  line-height: auto;
  word-break: normal;
  word-wrap: normal;
  white-space: pre;
  background-color: transparent;
  border: none;
}
.sunlight-line-number-margin {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-width: 0 1px 0 0;
  font-size: 12px;
  line-height: 15px;
  padding: 12px 4px !important;
}

